# pidentd

./: .gdbinit  BUGS  ChangeLog  FAQ  INSTALL  KNOWNBUGS  Makefile.dist  Makefile.in  README  README.md  Y2K  configure  configure.in
doc/: identd.8  sgi_irix.txt
etc/: identd.conf  identd.init  identd.xml
src/: .make.state  Makefile.in  avail.c  avail.h  buffer.c  buffer.h  cma_thr.h  conf.c  conf.h  config.h.in  daemon.c  daemon.h  gen_osinfo.c  hp_pthread.h  ibench.c  idecrypt.c  idecrypt.c.rej  identd.sig  ikeygen.c  itest.c  k_aix42.c  k_aix432.c  k_bsd42.c  k_dummy.c  k_irix4.c  k_irix5.c  k_linux.c  k_next_mach.c  k_osf4.c  k_osf5.c  k_sunos510.c  k_sunos54.c  k_sunos55.c  k_sunos56.c  k_sunos57.c  k_sunos58.c  kernel.c  kernel.h  main.c  no_thr.h  (+24 more)
